:sparkles: :bug: :lipstick: #75 #64 Layout fixed and Twitter share
- Added an other type of button (external link)
- Added Twitter share
- Changed transition for installation page to fix layout issue on page change

--- a/client/src/pages/Installation/installation.scss
+++ b/client/src/pages/Installation/installation.scss
@@ -4,10 +4,15 @@
   background-color: $color-blue;
   height: 100vh;
 
+  &__wrapper {
+    height: 100%;
+    width: 100%;
+  }
+
   &__part1 {
     height: 100vh;
-    background: linear-gradient($color-blue 93%, $color-pink);
     padding-bottom: 10rem;
+    left: 0 !important;
   }
 
   &__part2 {
